--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "esbuild": "0.12.5",
+    "jest": "27.0.3",
     "prettier": "2.3.0",
     "typescript": "4.3.2"
   },
