--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "esbuild": "0.12.5",
     "jest": "27.0.3",
     "prettier": "2.3.0",
+    "ts-jest": "27.0.2",
     "typescript": "4.3.2"
   },
   "prettier": {
