--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "0918nobita <nobita.0918@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "26.0.23",
     "esbuild": "0.12.5",
     "jest": "27.0.3",
     "prettier": "2.3.0",
