--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "esbuild --platform=browser --bundle --minify --outfile=lib/index.js src/index.ts",
     "dev": "esbuild --platform=browser --bundle --outfile=lib/index.js --watch src/index.ts",
-    "format": "prettier --write ./src/**/*.ts"
+    "format": "prettier --write ./src/**/*.ts",
+    "test": "jest"
   },
   "author": "0918nobita <nobita.0918@gmail.com>",
   "license": "MIT",
