:white_check_mark: 依存関係のバリデーションをワークフロー側で行うようにした

--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -3,18 +3,20 @@ name: Pull Request Review
 on: pull_request
 
 jobs:
-  pr-review:
+  eslint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install dependencies
-        run: yarn
       - name: Review using ESLint
         uses: reviewdog/action-eslint@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
           eslint_flags: '. --ext .ts'
+  jest:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
       - name: Review using Jest
         uses: ArtiomTr/jest-coverage-report-action@v1.3
         with:
