:hammer: .d.ts ファイルの書き出しを設定した

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "commonjs",
+    "declaration": true,
+    "emitDeclarationOnly": true,
     "outDir": "./lib",
     "rootDir": "./src",
-    "noEmit": true,
     "locale": "ja",
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
