--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "eslint-plugin-todo-plz": "1.2.0",
+    "fast-check": "2.16.0",
     "jest": "27.0.3",
     "prettier": "2.3.0",
     "ts-jest": "27.0.2",
