--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "esbuild --platform=browser --bundle --outfile=lib/index.js --watch src/index.ts",
     "lint": "eslint . --ext .ts",
     "format": "eslint . --fix --ext .ts",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage --coverageReporters json-summary html"
   },
   "author": "0918nobita <nobita.0918@gmail.com>",
   "license": "MIT",
@@ -26,9 +27,12 @@
     "eslint-plugin-simple-import-sort": "7.0.0",
     "eslint-plugin-todo-plz": "1.2.0",
     "fast-check": "2.16.0",
+    "fp-ts": "2.10.5",
+    "io-ts": "2.2.16",
     "jest": "27.0.4",
     "prettier": "2.3.1",
     "ts-jest": "27.0.3",
+    "ts-node": "10.0.0",
     "typescript": "4.3.2"
   },
   "prettier": {
