--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "26.0.23",
+    "@types/node": "15.12.1",
     "@typescript-eslint/eslint-plugin": "4.26.0",
     "@typescript-eslint/parser": "4.26.0",
     "esbuild": "0.12.6",
