--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier": "2.3.1",
     "ts-jest": "27.0.3",
     "ts-node": "10.0.0",
+    "tsd": "0.17.0",
     "typescript": "4.3.2"
   },
   "prettier": {
