--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   "author": "0918nobita <nobita.0918@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "7.14.3",
+    "@babel/preset-env": "7.14.4",
+    "@babel/preset-typescript": "7.13.0",
     "@types/jest": "26.0.23",
     "@types/node": "15.12.1",
     "@typescript-eslint/eslint-plugin": "4.26.0",
     "@typescript-eslint/parser": "4.26.0",
+    "babel-jest": "27.0.2",
     "esbuild": "0.12.6",
     "eslint": "7.28.0",
     "eslint-config-prettier": "8.3.0",
@@ -32,9 +36,7 @@
     "io-ts": "2.2.16",
     "jest": "27.0.4",
     "prettier": "2.3.1",
-    "ts-jest": "27.0.3",
     "ts-node": "10.0.0",
-    "tsd": "0.17.0",
     "typescript": "4.3.2"
   },
   "prettier": {
